--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-vue": "~10.7.0",
     "globals": "^17.0.0",
     "prettier": "3.8.1",
+    "sass": "^1.97.3",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5"
   },
